src/components/payment/donate_styles.scss
// PAYMENT COMPONENT STYLING
@import "../../styles";

// card payment section
.payment-modal {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  // padding-top: 35vh;
  z-index: 10;
  margin: auto;
  background: linear-gradient(0deg, rgba(255, 255, 255, 0.09), rgba(255, 255, 255, 0.09)), #07070F;
}

.payment-bar {
  width: 100%;
  height: 100%;
  align-items: center;
  background-color: none;
  position: relative;
}

.donate-box-container {
  width: 100%;
  height: 80%;
}

.donate-form {
  background: linear-gradient(0deg, rgba(255, 255, 255, 0.09), rgba(255, 255, 255, 0.09)), #07070F;
  width: 100%;
  height: 100%;
  //max-width: 500px;
  padding: 20px 40px 20px 40px;
  border: none;
  @include respond-to("small") {
    padding: 10px;
  }
}

.ticket-form {
  background: linear-gradient(0deg, rgba(255, 255, 255, 0.09), rgba(255, 255, 255, 0.09)), #07070F;
  width: 100%;
  height: 100%;
  //max-width: 500px;
  padding: 0px;
  border: none;
}

.donate-process-text {
  margin: 0px;
  padding: 5px 0px;
  color: rgba(255, 255, 255, 0.87) !important;
}

.donate-form-input {
  background: linear-gradient(0deg, rgba(255, 255, 255, 0.07), rgba(255, 255, 255, 0.07)), #07070F;
  border-radius: 3px;
  height: 15%;
  border: 1px solid rgba(255, 255, 255, 0.5) !important;
  box-sizing: border-box !important;
  border-radius: 5px !important;
  // height: 20%;
  text-align: left;
  margin-left: 3%;
  margin-top: 2%;
  margin-bottom: 2%;
  margin-right: 3%;
  border: none;
  caret-color: #E465A2;
  font-size: 1rem;
  padding: 12px 24px;
  color: rgba(255, 255, 255, 0.87);
  &::placeholder {
    color: rgba(255, 255, 255, 0.28);
  }
  &:focus {
    border: 2px solid #E465A2 !important;
  }
  @include respond-to("small") {
    padding: 8px 12px;
    margin-top: 4%;
    margin-bottom: 4%;
  }
}

.secure-msg {
  margin-top: 10px !important;
  @include respond-to("small") {
    margin-top: 8px !important;
  }
}

.short-width-input {
  width: 94%;
}

.donate-button {
  width: 94%;
  // height: 20%;
  background: #E465A2;
  border-radius: 4px;
  color: #000000;
  align-items: center;
  font-weight: bold;
  line-height: 20px;
  letter-spacing: 0.055em;
  font-size: 0.9rem;
  text-align: center;
  // padding: 1.6vh 0.7vw;
  border: none;
  cursor: pointer;
  margin-left: 10px;
  margin-right: 10px;
  &:hover {
    background: #EA91BD;
  }
}

.pay-success-msg {
  color: #4d4d4d !important;
}

.error-msg {
  color: #BE7884 !important;
  margin: 0px !important;
}

.venmo-code {
  margin-left: auto;
  margin-right: auto;
  display: flex;
  width: 280px;
  height: 221px;
  margin-top: 66px;
  @include respond-to("small") {
    width: 250px;
    height: 221px;
    margin-top: 30px;
  }
}

.venmo-container {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: linear-gradient(0deg, rgba(255, 255, 255, 0.07), rgba(255, 255, 255, 0.07)), #07070F;
  //bottom: 10%;
}

.venmo-text-container {
  margin-top: 48px;
  @include respond-to("small") {
    margin-top: 30px;
  }
}

.venmo-text {
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 25px;
  text-align: center;
  letter-spacing: 0.045em;
  color: rgba(255, 255, 255, 0.28) !important;
}

.grayout-text {
  color: rgba(255, 255, 255, 0.28) !important;
}

.paypal-button {
  width: 78%;
  // height: 20%;
  background: #E465A2;
  border-radius: 4px;
  color: #000000;
  align-items: center;
  font-weight: bold;
  line-height: 20px;
  letter-spacing: 0.055em;
  font-size: 0.9rem;
  text-align: center;
  // padding: 1.6vh 0.7vw;
  border: none;
  cursor: pointer;
  margin-left: 10px;
  margin-top: 40%;
  margin-right: 10px;
}

.wc-stripe-elements-field {
  caret-color: #E465A2 !important;
}
.InputElement {
  caret-color: #E465A2 !important;
  &:focus {
    border: 2px solid #E465A2 !important;
  }
}

